@@ -12,6 +12,8 @@
 	  #3163084 "Expack cannot repack extracted files using a wildcard"; however,
 	  this does not mean wildcards will work in non-POSIX shells. Fixed segfault
 	  when extracting from a flex file due to double delete.
+	* gamewin.cc: Default back to '(default)' if could not open custom keys or
+	  autonotes files. Made alignment and spacing consistent.
 	
 2012-12-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* audio/Midi.cc: Fixing segfault when you change the Midi device type and
